(library
 (name quote_csv)
 (modules quote_csv)
 (public_name options_pricing.quote_csv))

(library
 (name volatility)
 (modules volatility))

(library
 (name black_scholes)
 (modules black_scholes)
 (public_name options_pricing.black_scholes))

(library
 (name binomial_tree)
 (modules binomial_tree)
 (public_name options_pricing.binomial_tree))

(library
 (name monte_carlo)
 (public_name options_pricing.monte_carlo)
 (modules monte_carlo))

(library
 (name forbes_pricing)
 (public_name options_pricing.forbes_pricing)
 (modules forbes_pricing))
